// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > N8nCallout > should render additional slots correctly 1`] = `
"<div class="n8n-callout callout custom round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <n8n-icon-stub icon="git-branch" size="medium" spin="false"></n8n-icon-stub>
    </div>
    <n8n-text-stub bold="false" size="small" compact="false" tag="span"></n8n-text-stub> &nbsp; <n8n-link-stub size="small"></n8n-link-stub>
  </div>
  <n8n-link-stub theme="secondary" size="small" bold="true" underline="true" to="https://n8n.io"></n8n-link-stub>
</div>"
`;

exports[`components > N8nCallout > should render custom theme correctly 1`] = `
"<div class="n8n-callout callout custom round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <n8n-icon-stub icon="git-branch" size="medium" spin="false"></n8n-icon-stub>
    </div>
    <n8n-text-stub bold="false" size="small" compact="false" tag="span"></n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render danger theme correctly 1`] = `
"<div class="n8n-callout callout danger round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <n8n-icon-stub icon="triangle-alert" size="medium" spin="false"></n8n-icon-stub>
    </div>
    <n8n-text-stub bold="false" size="small" compact="false" tag="span"></n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render info theme correctly 1`] = `
"<div class="n8n-callout callout info round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <n8n-icon-stub icon="info" size="medium" spin="false"></n8n-icon-stub>
    </div>
    <n8n-text-stub bold="false" size="small" compact="false" tag="span"></n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render secondary theme correctly 1`] = `
"<div class="n8n-callout callout secondary round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <n8n-icon-stub icon="info" size="medium" spin="false"></n8n-icon-stub>
    </div>
    <n8n-text-stub bold="false" size="small" compact="false" tag="span"></n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render success theme correctly 1`] = `
"<div class="n8n-callout callout success round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <n8n-icon-stub icon="circle-check" size="medium" spin="false"></n8n-icon-stub>
    </div>
    <n8n-text-stub bold="false" size="small" compact="false" tag="span"></n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render warning theme correctly 1`] = `
"<div class="n8n-callout callout warning round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <n8n-icon-stub icon="triangle-alert" size="medium" spin="false"></n8n-icon-stub>
    </div>
    <n8n-text-stub bold="false" size="small" compact="false" tag="span"></n8n-text-stub> &nbsp;
  </div>
</div>"
`;
